--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@angular/cli": "^13.3.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/vue-fontawesome": "^0.1.7",
-    "axios": "^0.19.0",
+    "axios": "^0.26.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
-    "jquery": "^3.4.1",
+    "jquery": "^3.6.0",
     "popper.js": "^1.15.0",
+    "rxjs": "^7.5.5",
     "vee-validate": "^2.2.15",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
