--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~10.0.0",
     "bootstrap": "^5.1.3",
     "rxjs": "~6.5.5",
+    "sweetalert2": "^11.4.9",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
